--- a/odp-deploy/ansible/roles/clusternode/tasks/main.yml
+++ b/odp-deploy/ansible/roles/clusternode/tasks/main.yml
@@ -14,6 +14,11 @@
     - telnet
     - sysstat
     - sos
+    - git
+    - git-svn
+    - subversion
+    - unzip
+    - zip
 
 - name: find JAVA_HOME
   shell: rpm -ql java-1.7.0-openjdk-devel | fgrep bin | egrep bin$ | xargs dirname
