The systemd unit file was calling shutdown right after startup

--- a/odp-deploy/ansible/roles/sandbox/files/sandbox.service
+++ b/odp-deploy/ansible/roles/sandbox/files/sandbox.service
@@ -7,7 +7,7 @@ After=network.target network-online.target
 Type=simple
 User=root
 ExecStart=/opt/bin/sandbox_start.sh
-ExecStop=/opt/bin/sandbox_stop.sh
+#ExecStop=/opt/bin/sandbox_stop.sh
 Restart=on-abort
 
 
