--- a/odp-deploy/ansible/roles/sandbox/tasks/main.yml
+++ b/odp-deploy/ansible/roles/sandbox/tasks/main.yml
@@ -37,9 +37,8 @@
 
 ############### HDFS SCHEMA 
 
-#- name: start sandbox
-#  service: name=sandbox.service state=started
-#  register: startup
+- name: start sandbox
+  shell: systemctl start sandbox.service
 
 - name: wait for hdfs to start
   wait_for: port=8020 delay=2 host=sandbox.odp.org
