Add tags to hive

--- a/odp-deploy/vm/vagrant-ansible-sandbox/provision-sandbox.yml
+++ b/odp-deploy/vm/vagrant-ansible-sandbox/provision-sandbox.yml
@@ -12,5 +12,6 @@
     - clusternode
     - namenode
     - datanode
+    - { role: hive_latest, odp_version: '0.9.0.1-56', tags: ['hive'] }
     - itester
     - sandbox
